public/css/application.css
/* ... */
.defra-map__exit svg {
  display: inline-block;
  margin-right: 15px;
  vertical-align: top;
}
.defra-map__exit span {
  vertical-align: top;
}
.defra-map-reset {
  float: right;
  position: relative;
  border: 0;
  height: 50px;
  width: 50px;
  padding: 0;
  cursor: pointer;
  background-color: #ffffff;
  color: #0b0c0c;
  display: none;
}
.defra-map-reset:hover {
  background-color: #f3f2f1;
}
.defra-map-zoom {
  display: none;
}
.defra-map-zoom-in, .defra-map-zoom-out {
  display: flex;
  align-items: center;
  position: relative;
  border: 0;
  height: 50px;
  width: 50px;
  padding: 0;
  cursor: pointer;
  background-color: #ffffff;
  color: #0b0c0c;
}
.defra-map-zoom-in:hover, .defra-map-zoom-out:hover {
  background-color: #f3f2f1;
}
.defra-map-info {
  position: absolute;
  background-color: #ffffff;
  bottom: 15px;
  left: 15px;
  border: 2px solid #0b0c0c;
  padding: 10px;
  display: none;
  width: 320px;
}
.defra-map-info__container {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.defra-map-info__title-block {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}
.defra-map-info__title-block h2 {
  font-family: "GDS Transport", arial, sans-serif;
  font-size: 1.1875rem;
  font-style: normal;
  font-weight: 700;
  line-height: 25px;
  width: 295px;
  word-wrap: break-word;
}
.defra-map-info__close {
  cursor: pointer;
}
.defra-map-info__content {
  margin: 0;
  color: #0b0c0c;
  word-wrap: break-word;
  font-family: "GDS Transport", arial, sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: 300;
  line-height: 20px;
}

@media (min-width: 40.0625em) {
  .defra-map-zoom {
    display: block;
    float: right;
    clear: right;
    width: 50px;
    height: auto;
    margin-top: 15px;
  }
}
@media (min-width: 52.1875em) {
  .defra-map__exit {
    width: auto;
    padding-right: 11px;
  }
}
.govuk-checkboxes__input {
  width: 26px;
  height: 26px;
  margin-left: 2px;
  margin-top: 5px;
}

.defra-checkboxes {
  font-size: 1rem;
  font-style: normal;
  font-weight: 300;
  line-height: 20px;
}
.defra-checkboxes__label {
  display: flex;
  align-items: center;
}
.defra-checkboxes__label::before {
  top: 5px;
  width: 28px;
  height: 28px;
}
.defra-checkboxes__label::after {
  top: 12px;
  left: 7px;
  width: 19px;
  border-width: 0 0 4px 4px;
  height: 10px;
}

.defra-filter-section select {
  max-width: 120px;
  min-width: 95px;
}

.defra-filter-options {
  position: relative;
}
.defra-filter-options__heading {
  position: relative;
  padding: 10px 8px 5px 32px;
  margin: 0;
  cursor: pointer;
}
.defra-filter-options__title {
  font-family: "GDS Transport", arial, sans-serif;
  font-size: 1.1875rem;
  font-style: normal;
  font-weight: 300;
  line-height: 25px;
  cursor: pointer;
  color: #1d70b8;
}
.defra-filter-options__button {
  background: none;
  border: 0;
  text-align: left;
  padding: 0;
}
.defra-filter-options__button:after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
}
.defra-filter-options__button:focus {
  outline: none;
  text-decoration: none;
  color: #0b0c0c;
  background-color: #ffdd00;
  box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}
.defra-filter-options__button:hover {
  text-decoration: underline;
  text-underline-offset: 0.3em;
  text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
  -webkit-text-decoration-skip-ink: none;
  text-decoration-skip-ink: none;
  -webkit-text-decoration-skip: none;
}
.defra-filter-options__icon {
  display: none;
  position: absolute;
  top: 3px;
  left: 0;
  width: 30px;
  height: 40px;
  fill: #0b0c0c;
}
.defra-filter-options__container {
  position: relative;
  max-height: 200px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
}
.defra-filter-options__container::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 7px;
}
.defra-filter-options__container::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.87);
}
.defra-filter-options__container--inner {
  padding: 5px 5px 0;
}

.defra-filter-options__heading--closed .defra-filter-options__icon--down,
.defra-filter-options__heading--open .defra-filter-options__icon--up {
  display: block;
}

.defra-filter-options--closed .defra-filter-options__container {
  display: none;
}

.defra-filter-options--open .defra-filter-options__container {
  display: block;
}

.details-title {
  font-size: 2.25rem;
  font-style: normal;
  font-weight: 700;
  line-height: 40px;
  width: 630px;
}
.details-alt_title {
  font-size: 1.1875rem;
  font-style: normal;
  font-weight: 300;
  line-height: 25px;
  width: 630px;
  margin-bottom: 20px;
}

.govuk-tabs__list-item .govuk-tabs__tab {
  font-size: 1.1875rem;
  font-style: normal;
  font-weight: 300;
  line-height: 19px;
  color: #0b0c0c;
}

.tab-content-container {
  display: grid;
  gap: 15px;
}
.tab-content-row {
  display: grid;
  grid-template-columns: auto 1fr;
}
.tab-content-label {
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 20px;
  width: 270px;
  text-align: left;
  vertical-align: top;
  color: #000;
  margin: 0;
}
.tab-content-label span {
  font-size: 1rem;
  font-style: normal;
  font-weight: 300;
  line-height: 20px;
}
.tab-content-value {
  font-size: 1rem;
  font-style: normal;
  font-weight: 300;
  line-height: 20px;
  color: #0b0c0c;
  text-align: left;
}
.tab-content-value p {
  margin: 0;
}
.tab-content-value__not-provided {
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  line-height: 16px;
  letter-spacing: 1px;
  width: 130px;
  padding: 5px 1px 5px 5px;
  margin: 0;
  height: fit-content;
}

.open-data-block--disabled {
  padding-left: 15px;
  border-left: 5px solid #d4351c;
  margin-bottom: 25px;
}
/* ... */

